update box dropdown feature

--- a/Guidance.html
+++ b/Guidance.html
@@ -544,7 +544,7 @@ dl {
   <div class="col-12 col-md-6 col-lg-6">
     <h3 class="text-light pb-4" style="text-align: center;">Tips and tricks to note when applying to the Sandbox​</h3>
 
-    <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN" style="height: 123px;">
+    <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-5" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-5">
               <span style="color:black;">
                 <b><dl style="vertical-align: middle;">Think thoroughly about whether you are ready to test your proposed business model in a live environment</dl></b>
@@ -565,7 +565,7 @@ dl {
             </div>
           </div>
 
-    <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN" style="height: 123px;">
+    <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-6" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-6">
               <span style="color:black;">
                 <b><dl style="vertical-align: middle; padding-top: 1rem;">Be committed and sincere in engaging with us when you apply to the Sandbox</dl></b>
@@ -587,7 +587,7 @@ dl {
             </div>
           </div>
 
-    <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN" style="height: 123px;">
+    <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
             <div data-target="#faq-7" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-7">
               <span style="color:black;">
                 <b><dl>Write in a factual manner and communicate your key messages clearly in your application</dl></b>
@@ -612,7 +612,7 @@ dl {
 <!-- END FAQ LIST -->        
   <div class="col-12 col-md-6 col-lg-6">
       <h3 class="text-light pb-4" style="text-align: center;">Common misconceptions about the Sandbox</h3>
-          <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN" style="height: 123px;">
+          <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
                   <div data-target="#faq-8" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-8">
                     <span style="color:black;">
                       <b><dd>Participation in the Sandbox is considered a validation from the Bank to obtain a full license or approval</dd></b>
@@ -632,7 +632,7 @@ dl {
                   </div>
                 </div>
       
-          <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN" style="height: 123px;">
+          <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
                   <div data-target="#faq-9" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-9">
                     <span style="color:black;">
                       <b><dd>The Bank is too rigid in assessing the eligibility of applicants for participation in the Sandbox</dd></b>
@@ -658,7 +658,7 @@ dl {
                   </div>
                 </div>
       
-          <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN" style="height: 123px;">
+          <div class="card card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
                   <div data-target="#faq-10" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-10">
                     <span style="color:black;">
                       <b><dd>The Bank is too slow in providing a response on my eligibility to participate in the Sandbox</dd></b>
