change colour of regulation box

--- a/Regulations.html
+++ b/Regulations.html
@@ -15,7 +15,7 @@
 }
 
 .card-body-2:hover {
-  background-color: #FAC898;
+  background-color: #ffab40;
   color: white;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
