add new col in live-testing

--- a/index.html
+++ b/index.html
@@ -169,32 +169,27 @@
        
        <!--  FIN MKT LONG TERM INDICATORS -->
        
-       <div class="card col-4" style="height: fit-content;" >
+       <div class="card col-5" style="height: fit-content;" >
                     <div class="card-body flex-column" >
                       <table class="table pricing-table ">
                         <h4 class="pb-3" style="text-align: center; color: black;">Applicant(s) currently in live-testing</h4>
                     <thead>
                       <tr>
                         <th scope="col" class="py-1 px-2 h6" style="color: black;"> Company name</th>
+                        <th scope="col" class="py-1 px-2 h6" style="color: black;">Innovative solution(s)</th>
                         <th scope="col" class="py-1 px-2 bg-primary text-light h6">Start Date</th>
-                        <th scope="col" class="py-1 px-2 h6" style="color: black;">End Date</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
-                        <td scope="col" class="py-1 px-2">Makan Ciao Sdn Bhd</td>
-                        <td scope="col" class="py-1 px-2 bg-primary-alt">May 2020</td>
-                        <td scope="col" class="py-1 px-2">May 2021</td>
+                        <td scope="col" class="py-1 px-2">Jirnexu Sdn Bhd</td>
+                        <td scope="col" class="py-1 px-2">Insurance Aggregator</td>
+                        <td scope="col" class="py-1 px-2 bg-primary-alt">October 2017</td>
                       </tr>
                       <tr>
-                        <td scope="col" class="py-1 px-2">Big Tapau Sdn Bhd</td>
-                        <td scope="col" class="py-1 px-2 bg-primary-alt">Apr 2019</td>
-                        <td scope="col" class="py-1 px-2">Apr 2020</td>
-                      </tr>
-                      <tr>
-                        <td scope="col" class="py-1 px-2">Fresh Durian Sdn Bhd</td>
-                        <td scope="col" class="py-1 px-2 bg-primary-alt">Mar 2019</td>
-                        <td scope="col" class="py-1 px-2">Mar 2020</td>
+                        <td scope="col" class="py-1 px-2">Pru-BSN Takaful Sdn Bhd</td>
+                        <td scope="col" class="py-1 px-2">P2P Takaful Operator</td>
+                        <td scope="col" class="py-1 px-2 bg-primary-alt">September 2019</td>
                       </tr>
                       </tbody></table>
                     </div>
