--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <thead>
                       <tr>
                         <th scope="col" class="py-1 px-2 h6" style="color: black;"> Company name</th>
-                        <th scope="col" class="py-1 px-2 h6" style="color: black;">Innovative solution(s)</th>
+                        <th scope="col" class="py-1 px-2 h6" style="color: black;">Solution(s) under testing</th>
                         <th scope="col" class="py-1 px-2 bg-primary text-light h6">Start Date</th>
                       </tr>
                     </thead>
