--- a/index.html
+++ b/index.html
@@ -176,19 +176,19 @@
                     <thead>
                       <tr>
                         <th scope="col" class="py-1 px-2 h6" style="color: black;"> Company name</th>
-                        <th scope="col" class="py-1 px-2 h6" style="color: black;">Solution(s) under testing</th>
+                        <th scope="col" class="py-1 px-2 h6" style="color: black;">Product / Solution</th>
                         <th scope="col" class="py-1 px-2 bg-primary text-light h6">Start Date</th>
                       </tr>
                     </thead>
                     <tbody>
                       <tr>
                         <td scope="col" class="py-1 px-2">Jirnexu Sdn Bhd</td>
-                        <td scope="col" class="py-1 px-2">Insurance Aggregator</td>
+                        <td scope="col" class="py-1 px-2">RinggitPlus</td>
                         <td scope="col" class="py-1 px-2 bg-primary-alt">October 2017</td>
                       </tr>
                       <tr>
                         <td scope="col" class="py-1 px-2">Pru-BSN Takaful Sdn Bhd</td>
-                        <td scope="col" class="py-1 px-2">P2P Takaful Operator</td>
+                        <td scope="col" class="py-1 px-2">Pru-BSN Aman</td>
                         <td scope="col" class="py-1 px-2 bg-primary-alt">September 2019</td>
                       </tr>
                       </tbody></table>
