update content and looks

--- a/About.html
+++ b/About.html
@@ -16,12 +16,12 @@
   padding-right: 17px;
 }
 .rcorners1:hover {
-  background-color: rgb(231, 229, 229);
+  background-color: #ffab40;
   color: #1B4079;
   cursor: pointer;
   transform: rotate(0deg) scale(1) 
 translateY(-10px);
-  transition: .5s all ease;
+  transition: .7s all ease;
   z-index: 400;
 }
 
@@ -141,7 +141,7 @@ translateY(-10px);
             <br>
             <div class="row mx-1 justify-content-center">
               <div class="rcorners1">
-                 <a href="index.html#related-publications"><p style="color: black ;padding-top: 32px;">For further information, click here for the press release of the Sandbox Framework</p></a>
+                 <a href="index.html#related-publications"><p style="color: black ;padding-top: 32px;">For further information, you may refer to the press release for the Sandbox Framework</p></a>
                   <br>
               </div>
             </div>
