--- a/FAQ.html
+++ b/FAQ.html
@@ -96,7 +96,7 @@ clip: rect(0, 1903px, 447.71875px, 0);
     <section class="bg-dark text-light header-inner p-0 jarallax position-relative" data-jarallax data-speed="0.2" data-overlay>
       <img src="https://www.un.org/sites/un2.un.org/files/field/image/inspiring_global_action_reframing_responsibilities_to_one_another_and_our_communities_during_the_covid-19_pandemic.jpg" alt="Image" class="jarallax-img opacity-40">
       
-     <div class="container py-5">
+     <div class="container py-5 pb-2">
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
 		   <h1 class="h1">Frequently Asked Questions (FAQ)</h1>
@@ -125,7 +125,7 @@ clip: rect(0, 1903px, 447.71875px, 0);
   
       <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-1" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-1">
-                <span class="h6 mb-0">What is the Sandbox & is it right for you?</span>
+                <span class="h6 mb-0">What is the Sandbox and what does it do? </span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -265,30 +265,31 @@ clip: rect(0, 1903px, 447.71875px, 0);
               </div>
             </div>
   
-  
-            <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
-              <div data-target="#faq-10" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-10">
-                <span class="h6 mb-0">How can you apply to the Sandbox?</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
-  <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
-  </svg>
-              </div>
-              <div class="collapse" id="faq-10">
-                <div class="pt-3">
-                  <p class="mb-0">
-                    <div class="panel-body toggle-content fusion-clearfix">
-                      <p><span style="font-size: 11.0pt;">You can download the <a href="BNM-Sandbox-Application-Form.docx" download="BNM-Sandbox-Application-Form.docx">application form</a></em> and email it to<em><a href="mailto:fintech@bnm.gov.my"> fintech@bnm.gov.my</a></em></span></p>
-                      <p class="Default" style="text-align: justify;"><span style="font-size: 11.0pt;">Before you submit your application, you should ensure that you have read and understood the application guidance <a href="Guidance.html">here</a> in detail.  </span></p>
-                      </div>                   
-                     </p>
-                </div>
-              </div>
-            </div>
   <br>
   <h4 class="" style="color: white;">Application: What happens when you apply to the Sandbox?</h4>
             
-            <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
+  <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
+    <div data-target="#faq-10" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-10">
+      <span class="h6 mb-0">How can you apply to the Sandbox?</span>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
+<path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
+</svg>
+    </div>
+    <div class="collapse" id="faq-10">
+      <div class="pt-3">
+        <p class="mb-0">
+          <div class="panel-body toggle-content fusion-clearfix">
+            <p><span>You can download the <a href="BNM-Sandbox-Application-Form.docx" download="BNM-Sandbox-Application-Form.docx">application form</a></em> and email it to<em><a href="mailto:fintech@bnm.gov.my"> fintech@bnm.gov.my</a></em></span></p>
+            <p class="Default" style="text-align: justify;"><span>Before you submit your application, you should ensure that you have read and understood the application guidance <a href="Guidance.html">here</a> in detail.  </span></p>
+            </div>                   
+           </p>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-11" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-11">
                 <span class="h6 mb-0">What will we assess? </span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -421,7 +422,7 @@ clip: rect(0, 1903px, 447.71875px, 0);
 
             <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-18" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-18">
-                <span class="h6 mb-0">Where the testing is successful, can it be deemed as an automatic approval by BNM for the fintech company to provide the product/service/solution?</span>
+                <span class="h6 mb-0">Where a test is successful, can it be deemed as an automatic approval from BNM? </span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
