--- a/Regulations.html
+++ b/Regulations.html
@@ -167,10 +167,10 @@ translateY(-10px);
       <section class="has-divider py-0 bg-dark text-light header-inner p-0 jarallax position-relative" data-jarallax data-speed="0.2" data-overlay>
       <img src="https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/publications/cosmetics/cosmeticsdesign-asia.com/headlines/regulation-safety/china-s-new-cosmetics-regulations-key-points-you-need-to-know-about-csar-developments/9988165-1-eng-GB/China-s-new-cosmetics-regulations-Key-points-you-need-to-know-about-CSAR-developments_wrbm_large.jpg" alt="Image" class="jarallax-img opacity-20">
       
-     <div class="container py-0">
+     <div class="container py-4">
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
-		   <h2 class="h2">General Guidance on the Bank's Regulations</h2>
+		   <h2 class="h2">General Guidance on the Bank's Regulations</h2><br>
 		   <p class="lead">The principal role of the Bank is to promote monetary and financial stability that is conducive to the sustainable growth of the Malaysian economy. </p>
        <p class="lead">In doing so, the Bank is entrusted with several functions including the fostering of a sound, progressive and inclusive financial system. Accordingly, the Bank’s regulations are based on robust principles and are designed to achieve parity, proportionality and neutrality <a href="About.html#sandbox-principles" style="font-size: 14px;"><i><u>(more about principles)</u></i>​</a></p>
           </div>
@@ -506,7 +506,7 @@ translateY(-10px);
   <div class="col-12 col-md-12 col-lg-9">
   <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-7" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-7">
-                <span class="h6 mb-0">Step 1: Determine applicable scope of regulated activity or entity​</span>
+                <span class="h6 mb-0">Step 1: &nbsp Determine applicable scope of regulated activity or entity​</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -514,14 +514,17 @@ translateY(-10px);
               </div>
               <div class="collapse" id="faq-7">
                 <div class="pt-3">
-                  <p >E.g. Issuance of e-money</p>
+                  <p><em><b>Example:</b></em></p>
+                  <p>An applicant intends to provide a mobile based e-wallet service for the purpose of facilitating retail transactions. The e-wallet seeks to enable the use of ringgit as a means of payment to merchants that are partnered with an existing registered merchant acquirer. The applicant has a total shareholders’ funds of RM4 million. </p><br>
+                  <p><em><b>What is the potential scope of regulated activity or entity that may be applicable?</b></em></p>
+                  <p>E.g. Issuance of e-money</p>
                 </div>
               </div>
             </div>
   
       <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-8" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-8">
-                <span class="h6 mb-0">Step 2: Identify definition of regulated activity or entity under the legislation or guidelines​</span>
+                <span class="h6 mb-0">Step 2: &nbsp Identify definition of regulated activity or entity under the legislation or guidelines​</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -529,20 +532,29 @@ translateY(-10px);
               </div>
               <div class="collapse" id="faq-8">
                 <div class="pt-3">
-                    <p >E.g. E-money is defined in the Payment Systems (Designated Payment Instruments) Order 2003 as a payment instrument, whether tangible or intangible that:​</p>
+                  <p><em><b>Example:</b></em></p>
+                  <p>Under Section 4 of the Guideline on Electronic Money (E-money):</p>
+                  <ul>
+                    <li>E-money is defined in the Payment Systems (Designated Payment Instruments) Order 2003 as a payment instrument, whether tangible or intangible that: </li>
                     <ol>
                       <li>stores funds electronically in exchange of funds paid to the issuer; and</li>
                       <li>is able to be used as a means of making payment to any person other than the issuer.</li>
-                    </ol>
-                  </p>
-                  <p class="mb-1">Issuer of e-money refers to any person that is responsible for the payment obligation and assumes the liabilities for the e-money being issued.</p>
+                    </ol><br>
+                    <li>Issuer of e-money refers to any person that is responsible for the payment obligation and assumes the liabilities for the e-money being issued. </li>
+                    </ul>
+                    <p><em><b>Does the business model fit the definition of the regulated activity or entity?</b></em></p>
+                    <ul>
+                      <li>If yes, proceed to next step</li>
+                      <li>If no, reconsider if there are other potential scope of regulated activity or entity that may be applicable </li>
+                      <li>If unsure, seek appropriate legal consultation or guidance from the <a href="https://fintechbooster.com.my/">Fintech Booster Program</a>. If you are unable to obtain a clear answer, you may submit an inquiry to <a href="mailto:fintech@bnm.gov.my">fintech@bnm.gov.my </a></li>
+                    </ul>
                 </div>
               </div>
             </div>
   
       <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-9" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-9">
-                <span class="h6 mb-0">Step 3: Read through the regulatory requirements and identify requirements that may be a challenge for you to comply with.​</span>
+                <span class="h6 mb-0">Step 3: &nbsp Read through the regulatory requirements and identify requirements that may be a challenge for you to comply with.​</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -550,14 +562,20 @@ translateY(-10px);
               </div>
               <div class="collapse" id="faq-9">
                 <div class="pt-3">
-                  <p class="mb-1">E.g. section 13 prohibits issuer of e-money from issuing e-money at a discount, i.e. e-money that has a monetary value greater than the sum received.</p>
+                  <p><em><b>Example:</b></em></p>
+                  <p>Under Paragraph 14.2 of the Guideline on Electronic Money (E-money): </p>
+                  <ul>
+                    <li>Large e-money issuers are required to maintain, at all times, minimum shareholders’ funds unimpaired by losses of RM5 million or 8% of their outstanding e-money liabilities, whichever is higher </li>
+                  </ul>
+                  <p><em><b>Does the proposed business model face a challenge in satisfying the requirement? </b></em></p>
+                  <p>In this example, the applicant only has a total shareholders’ fund of RM4 million and faces significant difficulty in obtaining further funding. However, they expect to operate a large e-money scheme by extending the wallet limit beyond the RM200 limit for a small e-money scheme. </p>
                 </div>
               </div>
             </div>
 
             <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-10" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-10">
-                <span class="h6 mb-0">Step 4: Provide a clear rationale how the regulatory impediment affects you’re the value proposition of your business model​</span>
+                <span class="h6 mb-0">Step 4: &nbsp Provide a clear rationale how the regulatory impediment affects you’re the value proposition of your business model​</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
@@ -581,7 +599,7 @@ translateY(-10px);
 
             <div class="card mb-2 card-sm card-body hover-shadow-sm aos-init aos-animate" data-aos="fade-up" data-aos-delay="NaN">
               <div data-target="#faq-11" class="accordion-panel-title" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="faq-11">
-                <span class="h6 mb-0">Step 5: Propose mitigation measures or safeguards to address the underlying risks associated with a regulatory requirement​</span>
+                <span class="h6 mb-0">Step 5: &nbsp Propose mitigation measures or safeguards to address the underlying risks associated with a regulatory requirement​</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="injected-svg icon" data-src="/o/finmkt/images/icons/interface/plus.svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <path d="M19 11H5C4.44772 11 4 11.4477 4 12C4 12.5523 4.44772 13 5 13H19C19.5523 13 20 12.5523 20 12C20 11.4477 19.5523 11 19 11Z" fill="#212529"></path>
   <path d="M13 19L13 5C13 4.44772 12.5523 4 12 4C11.4477 4 11 4.44772 11 5L11 19C11 19.5523 11.4477 20 12 20C12.5523 20 13 19.5523 13 19Z" fill="#212529"></path>
