--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
                         <h4 class="pb-3" style="text-align: center; color: black;">Applicant(s) currently in live-testing</h4>
                     <thead>
                       <tr>
-                        <th scope="col" class="py-1 px-2 h6" style="color: black;"> Company name</th>
-                        <th scope="col" class="py-1 px-2 h6" style="color: black;">Product / Solution</th>
-                        <th scope="col" class="py-1 px-2 bg-primary text-light h6">Start Date</th>
+                        <th scope="col" class=" px-2 h6" style="color: black;"> Company name</th>
+                        <th scope="col flex" class=" px-2 h6" style="color: black;">Product</th>
+                        <th scope="col" class=" px-2 bg-primary text-light h6">Start Date</th>
+                        <th scope="col" class=" px-2 h6" style="color: black;">End Date</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -185,11 +186,13 @@
                         <td scope="col" class="py-1 px-2">Jirnexu Sdn Bhd</td>
                         <td scope="col" class="py-1 px-2">RinggitPlus</td>
                         <td scope="col" class="py-1 px-2 bg-primary-alt">October 2017</td>
+                        <td scope="col" class="py-1 px-2">undefined</td>
                       </tr>
                       <tr>
                         <td scope="col" class="py-1 px-2">Pru-BSN Takaful Sdn Bhd</td>
                         <td scope="col" class="py-1 px-2">Pru-BSN Aman</td>
                         <td scope="col" class="py-1 px-2 bg-primary-alt">September 2019</td>
+                        <td scope="col" class="py-1 px-2">September 2021</td>
                       </tr>
                       </tbody></table>
                     </div>
