content update post P

--- a/Regulations.html
+++ b/Regulations.html
@@ -171,8 +171,7 @@ translateY(-10px);
         <div class="row text-center justify-content-center" data-aos="fade-up">
           <div class="col">
 		   <h2 class="h2">General Guidance on the Bank's Regulations</h2><br>
-		   <p class="lead">The principal role of the Bank is to promote monetary and financial stability that is conducive to the sustainable growth of the Malaysian economy. </p>
-       <p class="lead">In doing so, the Bank is entrusted with several functions including the fostering of a sound, progressive and inclusive financial system. Accordingly, the Bank’s regulations are based on robust principles and are designed to achieve parity, proportionality and neutrality <a href="About.html#sandbox-principles" style="font-size: 14px;"><i><u>(more about principles)</u></i>​</a></p>
+		   <p class="lead">The principal role of the Bank is to promote monetary and financial stability that is conducive to the sustainable growth of the Malaysian economy. In doing so, the Bank is entrusted with several functions including the fostering of a sound, progressive and inclusive financial system.</p>
           </div>
         </div>
       </div>
