--- a/Guidance.html
+++ b/Guidance.html
@@ -354,7 +354,7 @@ dl {
 </section>
     
 <!--PRE APPLICATION SECTION-->
-<section class="bg-primary pt-0 pb-4"><div id="pre-application"></div>
+<section class="bg-primary pt-0 pb-3"><div id="pre-application"></div>
   <div class="divider bg-primary-alt py-0">
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="96px" viewBox="0 0 100 100" version="1.1" preserveAspectRatio="none" class="injected-svg bg-primary" data-src="images/dividers/divider-3.svg">
  <path d="M0,0 C6.83050094,50 15.1638343,75 25,75 C41.4957514,75 62.4956597,0 81.2456597,0 C93.7456597,0 99.9971065,0 100,0 L100,100 L0,100"></path>
@@ -363,7 +363,7 @@ dl {
 
   
   <div class="row mx-1 pt-5 justify-content-center">
-    <div class="col-12 col-md-12 col-lg-8">
+    <div class="pb-3 col-12 col-md-12 col-lg-8">
 <!-- FAQ LIST - PLS NUMBER THE FAQ IN DATATARGET AND ARIACONTROL AND ID -->
 <h3 style="text-align: left; color: white;">Pre-application - <i>What should i do before applying to the Sandbox?</i></h3><br>
 <p style="text-align: left; color: white;">Is the Sandbox right for you? Conduct a quick self-assessment on whether the Sandbox is applicable to you​:</p>
